04_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-galera-new-mysql
  labels:
    app: mariadb-galera
spec:
  type: NodePort
  ports:
    - port: 3306
      nodePort: 30036
  selector:
    app.kubernetes.io/instance: mariadb-galera-new
    app.kubernetes.io/name: mariadb-galera
